# nanoWhisper

./: .env  .gitignore  README.md  pyproject.toml
configs/: yoruba_cuda.json  yoruba_mps.json  yoruba_tiny.json
data/manifests/: README.md  example.csv  test.csv  train.csv  val.csv
runs/yoruba_cuda/: best_20260624_175738.csv  best_20260624_205303.csv  train_log_20260624_161228.csv  train_log_20260624_163213.csv  train_log_20260624_190628.csv  vocab.json
runs/yoruba_mps/: eval_best.csv  eval_best_run2.csv  eval_best_run2_fixed.csv  eval_best_run3.csv  eval_best_run4.csv  train_log_20260623_204251.csv  train_log_20260623_220114.csv  train_log_20260623_232007.csv  train_log_20260624_063457.csv
runs/yoruba_tiny/: eval_best.csv  eval_best_run2.csv  eval_best_run3.csv  eval_best_run4.csv  train_log_20260623_204251.csv  train_log_20260623_220114.csv  train_log_20260623_232007.csv  train_log_20260624_063457.csv  train_log_20260624_084431.csv
scripts/: evaluate.py  extract_waxal_yor.py  merge_manifests.py  prepare_common_voice.py  train.py  transcribe.py
src/nanowhisper/: __init__.py  audio.py  checkpoint.py  config.py  data.py  metrics.py  model.py  tokenizer.py  training.py
src/nanowhisper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_metrics.py  test_model.py  test_tokenizer.py
