[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanowhisper"
version = "0.1.0"
description = "Small Whisper-style ASR model for Yoruba speech"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchaudio>=2.2",
  "torchcodec>=0.14; platform_system == 'Darwin'",
  "numpy>=1.24",
  "tqdm>=4.66",
  "tensorboard>=2.16",
  "datasets>=5.0.0",
  "soundfile>=0.14.0",
  "trackio",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

